--- a/c8_index.html
+++ b/c8_index.html
@@ -89,7 +89,7 @@
 		</aside>
 	</main>
 	<footer>
-		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>&copy; April 11, 2023. Frank LeFebvre, IS 117 Section 006.</p>
 	</footer>
 </body>
 </html>
